--- a/cn-cu-fra.html
+++ b/cn-cu-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Contactez-nous &ndash; CSE &ndash; TPSGC</title>
+<title>Contactez CSE &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="Contactez-nous - CSE - TPSGC" />
+<meta name="dc.title" content="Contactez CSE - CSE - TPSGC" />
 <meta name="dc.subject" scheme="gccore" content="Navire; Quai; Communications; Information" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
@@ -93,13 +93,12 @@
 
 				<h2>Par courriel</h2>
 				
-				<p><strong>AVIS IMPORTANT</strong>&nbsp;: Pour des raisons de s&eacute;curit&eacute; et de confidentialit&eacute;, nous vous demandons de ne pas nous envoyer de renseignements personnels comme votre num&eacute;ro d'assurance sociale (NAS), votre adresse domiciliaire ou professionnelle ou le num&eacute;ro de dossier assign&eacute; par le service. Nous souhaitons &eacute;galement vous aviser que nous ne sommes pas en mesure de transf&eacute;rer des courriels en votre nom et que nous ne pouvons pas accepter et traiter des changements d'adresse. </p>
-				<p>Vous pouvez soumettre vos questions et/ou commentaires directement &agrave;&nbsp;: <br />
-					<a href="mailto:cse-egd@tpsgc-pwgsc.gc.ca">cse-egd@tpsgc-pwgsc.gc.ca</a> </p>
+				<p><strong>AVIS IMPORTANT</strong>&nbsp;: Pour des raisons de s&eacute;curit&eacute; et de confidentialit&eacute;, nous vous demandons de ne pas nous envoyer de renseignements personnels comme votre num&eacute;ro d'assurance sociale (NAS), votre adresse domiciliaire ou professionnelle ou le num&eacute;ro de dossier assign&eacute; par le service. Nous souhaitons &eacute;galement vous aviser que nous ne sommes pas en mesure de transf&eacute;rer des courriels en votre nom et que nous ne pouvons pas accepter et traiter des changements d'adresse.</p>
+				<p>Vous pouvez soumettre vos questions et/ou commentaires directement &agrave; <a href="mailto:cse-egd@tpsgc-pwgsc.gc.ca">cse-egd@tpsgc-pwgsc.gc.ca</a>.</p>
 				<h2>Par formulaire</h2>
 				<p>Pour obtenir une r&eacute;ponse par voie &eacute;lectronique, veuillez
-					indiquer votre adresse &eacute;lectronique.<br />
-					<strong>Veuillez prendre note</strong> que tous les renseignements personnels recueillis dans le pr&eacute;sent formulaire sont prot&eacute;g&eacute;s en vertu de la <a href="http://laws-lois.justice.gc.ca/fra/lois/P-21/index.html">Loi sur la protection des renseignements personnels</a>.</p>
+					indiquer votre adresse &eacute;lectronique.</p>
+				<p><strong>Veuillez prendre note</strong> que tous les renseignements personnels recueillis dans le pr&eacute;sent formulaire sont prot&eacute;g&eacute;s en vertu de la <a href="http://laws-lois.justice.gc.ca/fra/lois/P-21/index.html"><em>Loi sur la protection des renseignements personnels</em></a>.</p>
 				<form method="post" action="/cgi-bin/generic_email.pl" id="clfcontactform">
 					<p>
 					<!-- une adresse qui commence avec http:// est requise pour afficher la page de confirmation -->
@@ -173,6 +172,8 @@
 					Canada</p>
 				<h3>T&eacute;l&eacute;phone&nbsp;:</h3>
 				<p>604-666-5191</p>
+				<h3>Par t&eacute;l&eacute;scripteur (ATS)&nbsp;:</h3>
+				<p>Service ATS sans frais (pour les personnes malentendantes)&nbsp;:&nbsp;1-800-926-9105</p>
 				<h3>Notre fax&nbsp;:</h3>
 				<p>250-363-8059</p>
 				<h2><a name="con-pri">&Eacute;nonc&eacute; de confidentialit&eacute;</a></h2>
@@ -185,22 +186,9 @@
 					selon les calendriers de conservation et de disposition &eacute;tablis pour
 					ces fichiers.</p>
 				<p>Vos renseignements personnels sont prot&eacute;g&eacute;s en vertu des
-					dispositions de la <a href="http://laws-lois.justice.gc.ca/fra/lois/P-21/index.html"><em>Loi
-					sur la protection des renseignements personnels</em></a>. De plus, conform&eacute;ment
-					aux dispositions de cette loi, vous avez le droit de demander d'acc&eacute;der &agrave; vos
-					renseignements personnels et d'y apporter des modifications s'ils sont erron&eacute;s
-					ou incomplets. Pour vous pr&eacute;valoir de vos droits ou pour obtenir
-					des pr&eacute;cisions au sujet de cet &eacute;nonc&eacute;, veuillez communiquer
-					avec votre coordonateur de la protection des renseignements personnels, &agrave; l'adresse &eacute;lectronique <a href="mailto:ncr.atip@tpsgc.gc.ca">ncr.atip@tpsgc.gc.ca</a>.
-					Pour obtenir plus de renseignements sur les questions de protection des
-					renseignements personnels et sur la Loi sur la protection des renseignements
-					personnels, veuillez consulter le site Web du <a href="http://www.priv.gc.ca/index_f.cfm">Commissariat &agrave; la
-					protection de la vie priv&eacute;e du Canada</a>.</p>
-				<p> Pour obtenir de plus amples renseignements sur vos droits, visitez <a href="http://infosource.gc.ca/index_f.asp"> Info
-						Source</a>. Cette publication du gouvernement du Canada est offerte par
-						les grandes biblioth&egrave;ques, par les bureaux d&rsquo;information du
-						gouvernement et les bureaux de circonscription des d&eacute;put&eacute;s
-						du Parlement f&eacute;d&eacute;ral.</p>
+					dispositions de la <a href="http://laws-lois.justice.gc.ca/fra/lois/P-21/index.html"><em>Loi sur la protection des renseignements personnels</em></a>. De plus, conform&eacute;ment aux dispositions de cette loi, vous avez le droit de demander d'acc&eacute;der &agrave; vos renseignements personnels et d'y apporter des modifications s'ils sont erron&eacute;s ou incomplets. Pour vous pr&eacute;valoir de vos droits ou pour obtenir des pr&eacute;cisions au sujet de cet &eacute;nonc&eacute;, veuillez communiquer avec votre coordonateur de la protection des renseignements personnels, &agrave; l'adresse &eacute;lectronique <a href="mailto:AIPRP.ATIP@tpsgc-pwgsc.gc.ca">AIPRP.ATIP@tpsgc-pwgsc.gc.ca</a>.
+					Pour obtenir plus de renseignements sur les questions de protection des renseignements personnels et sur la <em>Loi sur la protection des renseignements personnels</em>, veuillez consulter le site Web du <a href="http://www.priv.gc.ca/index_f.cfm">Commissariat &agrave; la protection de la vie priv&eacute;e du Canada</a>.</p>
+				<p> Pour obtenir de plus amples renseignements sur vos droits, visitez <a href="http://infosource.gc.ca/index_f.asp"> Info Source</a>. Cette publication du gouvernement du Canada est offerte par les grandes biblioth&egrave;ques, par les bureaux d&rsquo;information du gouvernement et les bureaux de circonscription des d&eacute;put&eacute;s du Parlement f&eacute;d&eacute;ral.</p>
 				<p>Internet est un forum public et l'information &eacute;lectronique peut &ecirc;tre
 					intercept&eacute;e. Le pr&eacute;sent site n'est pas un site Web prot&eacute;g&eacute;.
 					Ne divulguez pas d'information confidentielle non n&eacute;cessaire qui
