--- a/conduite-conduct-fra.html
+++ b/conduite-conduct-fra.html
@@ -94,13 +94,7 @@
 					</h1>
 				<h2>ARTICLE&nbsp;1</h2>
 				<h3><strong>OBJET ET PRINCIPES DIRECTEURS</strong></h3>
-				<p><strong>1.1&nbsp;Objet du Code.</strong><em> L&rsquo;autorisation de faire
-						des affaires &agrave; la cale s&egrave;che d&rsquo;Esquimalt est un privil&egrave;ge
-						et non un droit.</em> Le pr&eacute;sent Code vise &agrave; &eacute;tablir
-						et &agrave; pr&eacute;senter clairement les valeurs collectives, responsabilit&eacute;s,
-						obligations et politiques en mati&egrave;re d&rsquo;&eacute;thique impos&eacute;es &agrave; toutes
-						les entreprises, selon le cas, <em>lorsqu&rsquo;elles m&egrave;nent des
-						activit&eacute;s &agrave; la cale s&egrave;che d&rsquo;Esquimalt</em>. </p>
+				<p><strong>1.1&nbsp;Objet du Code.</strong><em> L&rsquo;autorisation de faire des affaires &agrave; la cale s&egrave;che d&rsquo;Esquimalt (CSE) est un privil&egrave;ge et non un droit.</em> Le pr&eacute;sent Code vise &agrave; &eacute;tablir et &agrave; pr&eacute;senter clairement les valeurs collectives, responsabilit&eacute;s, obligations et politiques en mati&egrave;re d&rsquo;&eacute;thique impos&eacute;es &agrave; toutes les entreprises, selon le cas, <em>lorsqu&rsquo;elles m&egrave;nent des activit&eacute;s &agrave; la cale s&egrave;che d&rsquo;Esquimalt</em>.</p>
 				<p> &Agrave; titre d&rsquo;&eacute;tablissement de l&rsquo;&Eacute;tat accessible &agrave; tous
 					et &agrave; multiples utilisateurs, nous accordons de la valeur aux principes
 					que sont la transparence et l&rsquo;ouverture. Nous nous attendons &agrave; ce
@@ -173,7 +167,7 @@
 					suivant la r&eacute;ception officielle.</p>
 				<p><strong>1.7&nbsp;Distribution.</strong> Le Code est distribu&eacute; &agrave; toutes
 					les entreprises qui m&egrave;nent des activit&eacute;s &agrave; la cale
-					s&egrave;che d&rsquo;Esquimalt et est publi&eacute; sur le site Web <em>www.pwgsc.gc.ca/pacific/egd</em>.</p>
+					s&egrave;che d&rsquo;Esquimalt et est publi&eacute; sur le site Web <em>www.tpsgc-pwgsc.gc.ca/pac/cse-egd</em>.</p>
 				<p><strong>1.8&nbsp;R&eacute;vision du Code.</strong> Le Code est revu et modifi&eacute; au
 					besoin.</p>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
