--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -114,9 +114,9 @@
         <br />
 				<div class="option4">
 					<h2>Dimensions du bassin</h2>
-					<a href="dimensions2-fra.html"><img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="450" height="282" /></a>
+					<a href="dimensions2-fra.html"><img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale s&egrave;che d'Esquimalt." title="S'il vous pla&icirc;t cliquer ici pour voir une version agrandie de cette image." width="450" height="282" /></a>
 					<h2>Vue a&eacute;rienne du bassin</h2>
-					<img src="images/aerienne-aerial-fra.jpg" width="450" height="284" alt="Vue aérienne du quai d'embarquement nord et de la jetée sud." />
+					<img src="images/aerienne-aerial-fra.jpg" width="450" height="284" alt="Vue a&eacute;rienne du quai d'embarquement nord et de la jet&eacute;e sud." />
 					<h2>Vue en coupe du bassin</h2>
 					<img src="images/coupe-section-fra.jpg" width="450" height="217" alt="Coupe transversale du quai montrant l'élévation par rapport au sol" />
 					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
