--- a/dimensions2-fra.html
+++ b/dimensions2-fra.html
@@ -77,17 +77,19 @@
 		
 		<!-- ONE COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE D'UNE COLONNE -->
 	<!-- CONTENT BEGINS | DEBUT DU CONTENU --> 
-	<div class="center">	
-		<div class="option2">
-			<h1><a name="cont" id="cont">
+		<div class="center">	
+			<div class="option2">
+				<h1><a name="cont" id="cont">
 		<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-			Dimensions du bassin
+				Dimensions du bassin
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-			</a></h1><a name="il" id="il"></a>
+				</a></h1><a name="il" id="il"></a>
 			
-		<img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="740" style="width: 740px; " />
-
-				</div>
+				<img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="740" style="width: 740px; " />
+			</div>
+				
+			<p style="text-align:center;"><a href="dimensions-fra.html" title="Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;">Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;</a></p>
+			
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
