--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -86,8 +86,7 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Meilleures pratiques de gestion
-						de l'environnement
+					Meilleures pratiques de gestion de l'environnement
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
         </h1>
 
