--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -70,7 +70,7 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
 			&gt;&nbsp;<a href="programme-program-fra.html">Programme
-			environnemental</a> &gt; Politique </p>
+			environnemental</a> &gt; Politique environnementale</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
