--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -93,7 +93,7 @@
 				<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 		  </h1>
       <p style="text-align:center;"><em>It is the goal of the Esquimalt
-				Graving Dock, in partnership with the ship repair industry, to be the premier
+				Graving Dock (EGD), in partnership with the ship repair industry, to be the premier
 				ship repair, construction and maintenance facility on the west coast of North
         America.</em></p>
 
