--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -90,7 +90,7 @@
       </h1>
 
       <p style="text-align:center;">
-        <em>La Cale s&egrave;che d'Esquimalt,
+        <em>La Cale s&egrave;che d'Esquimalt (CSE),
         en partenariat avec l'industrie de r&eacute;partion de navires, veut &ecirc;tre
         le meilleur chantier naval de la c&ocirc; Ouest de l'Am&eacute;rique du Nord.</em>
       </p>
