--- a/his/1927-eng.html
+++ b/his/1927-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>1927 &ndash; EGD &ndash; PWGSC</title>
+<title>History&nbsp;1927 &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="1927 - EGD - PWGSC" />
+<meta name="dc.title" content="History 1927 - EGD - PWGSC" />
 <meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; History" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
@@ -73,7 +73,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt;&nbsp;1927<br />
+			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; History&nbsp;1927<br />
 			</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
@@ -90,11 +90,10 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					History
+					History&nbsp;1927
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="option4">
-					<h2>1927</h2>
 					<div class="smallFont" style="font-weight:bold;">
 						<img src="../images/historique_history/1927_1.jpg" alt="" width="300" height="236" /><br />
 						Confederation Ceremony<br /><br />
