--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -91,9 +91,9 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					History<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
-				<h2><acronym title="Queen Elizabeth">QE</acronym> Article </h2>
+					<acronym title="Queen Elizabeth">QE</acronym> Article
+					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
+				</h1>
 				<p><em>Loose Lips Sink Ships</em></p>
 				<p>Longtime Esquimalt resident Ken Moffat was just five-years-old when the
 					massive passenger liner Queen Elizabeth crept into Esquimalt Harbour in
