--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -86,10 +86,9 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Historique
+					Article sur le <acronym title="Queen Elizabeth">QE</acronym>
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
-					</h1>
-				<h2>Article sur le <acronym title="Queen Elizabeth">QE</acronym></h2>
+				</h1>
 				<p><em>Un secret bien gard&eacute;</em></p>
 				<p>Ken Moffat, originaire d'Esquimalt, n'avait que cinq ans lorsque le tr&egrave;s
 					majestueux paquebot Queen Elizabeth fit son entr&eacute;e dans le port d'Esquimalt.
