--- a/index-eng.html
+++ b/index-eng.html
@@ -121,7 +121,7 @@
 				<li>Canadian vessels &ndash; especially the Department of National Defense and
 					the British Columbia Ferry Corporation.</li>
 			</ul>
-			<p>Our <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 environmental management system ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
+			<p>Our <a href="env/programme-program-eng.html"><acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 environmental management system</a> ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
           </p>
         </div>
       </div>
