--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 <div class="mcontainter"><div class="core">
 	<!-- DEBUT DE L'EN-TETE PCIM | FIP HEADER BEGINS -->
-	<div class="fip"><img src="/clf20/images/sig-fra.gif" width="364" height="33" alt="Public Works and Government Services Canada | Travaux publics et Services gouvernementaux Canada" /></div>
+	<div class="fip"><img src="/clf20/images/sig-fra.gif" width="364" height="33" alt="Travaux publics et Services gouvernementaux Canada | Public Works and Government Services Canada " /></div>
 	<!-- FIN DE L'EN-TETE PCIM | FIP HEADER ENDS -->
 
 	<!-- DEBUT DU CONTENU | CONTENT BEGINS -->
@@ -80,7 +80,7 @@
 		<div class="lb"><div class="langbtn"><a href="index-eng.html">English</a></div></div>
 		<!-- FIN DU LIEN ANGLAIS | ENGLISH LINK ENDS -->
 	</div>
-	<div class="wm"><img src="/clf20/images/wmms.gif" alt="Symbol of the Government of Canada | Symbole du gouvernement du Canada" width="83" height="20" /></div>
+	<div class="wm"><img src="/clf20/images/wmms.gif" alt="Symbole du gouvernement du Canada | Symbol of the Government of Canada" width="83" height="20" /></div>
 	<!-- FIN DU CONTENU | CONTENT ENDS -->
 
 	<!-- DEBUT DU PIED DE LA PAGE | FOOTER BEGINS -->
