--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Contact Us &ndash; EGD &ndash; PWGSC</title>
+<title>Contact EGD &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="Contact Us - EGD - PWGSC" />
+<meta name="dc.title" content="Contact EGD - EGD - PWGSC" />
 <meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Communications; Information" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
@@ -97,12 +97,11 @@
 
 				<h2><a>E-mail</a></h2>
 				<p><strong>IMPORTANT:</strong> For reasons of security and privacy, we ask you not to send us any personal information such as your Social Insurance Number (SIN), home or business address, or departmentally-assigned case or file numbers. We would also like you to be aware that we cannot forward e-mail messages on your behalf and that we cannot accept and process changes of address.</p>
-				<p>You can submit your questions and/or comments directly to <br />
-					<a href="mailto:egd-cse@pwgsc-tpsgc.gc.ca">egd-cse@pwgsc-tpsgc.gc.ca</a> </p>
+				<p>You can submit your questions and/or comments directly to <a href="mailto:egd-cse@pwgsc-tpsgc.gc.ca">egd-cse@pwgsc-tpsgc.gc.ca</a>.</p>
 				<h2>Form</h2>
-				<p>If you would like an electronic response, please include your e-mail address. <br />
-					<strong>Please note:</strong> All personal information collected on this
-					form is protected under the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html">Privacy Act</a>.</p>
+				<p>If you would like an electronic response, please include your e-mail address.</p>
+				<p><strong>Please note:</strong> All personal information collected on this
+					form is protected under the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>.</p>
 				<form method="post" action="/cgi-bin/generic_email.pl" id="clfcontactform">
 				   <p>
 					<!-- une adresse qui commence avec http:// est requise pour afficher la page de confirmation -->
@@ -175,7 +174,11 @@
 					V9A&nbsp;2P1<br />
 					Canada</p>
 				<h3>Telephone us:</h3>
-				<p>250-363-3877&nbsp;or&nbsp;250-363-8056</p>
+				<p>250-363-3877&nbsp;or&nbsp;250-363-8056</p>			
+				
+				<h3>Teletypewriter (TTY):</h3>
+				<p>Toll-free (for hearing-impaired):&nbsp;1-800-926-9105</p>
+				
 				<h3>Fax us:</h3>
 				<p>250-363-8059</p>
 				<h2><a name="con-pri">Privacy Notice Statement</a></h2>
@@ -188,7 +191,7 @@
 				<p>Your personal information is protected under the provisions of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>. Under the Act, you have the right to request access to and
 							correction of your personal information, if erroneous or incomplete. If
 							you wish to avail yourself of this right or require clarification about
-							this Statement, contact our Privacy Coordinator at <a href="mailto:ncr.atip@pwgsc.gc.ca">ncr.atip@pwgsc.gc.ca</a>.
+							this Statement, contact our Privacy Coordinator at <a href="mailto:AIPRP.ATIP@tpsgc-pwgsc.gc.ca">AIPRP.ATIP@tpsgc-pwgsc.gc.ca</a>.
 							For more information on privacy issues and the <em>Privacy Act</em> consult
 							the <a href="http://www.priv.gc.ca/index_e.cfm">Privacy Commissioner's
 							Web site</a>.</p>
