--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -99,11 +99,7 @@
 					</h1>
 				<h2><strong>ARTICLE&nbsp;1</strong></h2>
 				<h3><strong>OBJECT AND GUIDING PRINCIPLES</strong></h3>
-				<p><strong>1.1&nbsp;Object of Code</strong>. <em> Conducting business at the Esquimalt
-						Graving Dock is a privilege, not a right.</em> The object of this Code
-						is to establish and articulate the corporate values, responsibilities,
-						obligations and ethical policies that all businesses, as applicable, are
-						to prescribe to <em>while operating at the Esquimalt Graving Dock</em>. </p>
+				<p><strong>1.1&nbsp;Object of Code</strong>. <em> Conducting business at the Esquimalt Graving Dock (EGD) is a privilege, not a right.</em> The object of this Code is to establish and articulate the corporate values, responsibilities, obligations and ethical policies that all businesses, as applicable, are to prescribe to <em>while operating at the Esquimalt Graving Dock</em>. </p>
 				<p>As a multi-user, open facility owned by the people of Canada, we value
 					transparency and openness. It is expected that the users of this facility
 					respect the Esquimalt Graving Dock&rsquo;s established processes and systems
@@ -129,7 +125,7 @@
             under <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 certification;</li>
           <li>(c) As a designated port, the Government of Canada will adhere to the
             commitments required for international security as determined by the International
-            Ship and Port Security (ISPS) legislation. </li>
+            Ship and Port Security (ISPS) legislation;</li>
           <li>(d) Businesses have a responsibility to maintain an environment where
             conflict and difference can be addressed in a manner characterized by respect
             and civility;</li>
@@ -159,7 +155,7 @@
 					two weeks of official receipt.</p>
 				<p><strong>1.7&nbsp;Distribution</strong>. This Code will be distributed to all
 					businesses operating at the Esquimalt Graving Dock and will be published
-					on the <em>www.pwgsc.gc.ca/pacific/egd</em> web site.</p>
+					on the <em>www.tpsgc-pwgsc.gc.ca/pac/cse-egd</em> web site.</p>
 				<p><strong>1.8&nbsp;Code Review</strong>. This Code will be reviewed and amended
 					as required.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
