--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -87,6 +87,9 @@
 		
 		<img src="images/dimensions.gif" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" width="740"  style="width: 740px; " />
 			</div>
+			
+			<p style="text-align:center;"><a href="dimensions-eng.html" title="Back to &lsquo;About the Dock&rsquo;">Back to &ldquo;About the Dock&rdquo;</a></p>
+			
 		</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
