--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -112,22 +112,22 @@
 					inside, stranded on the dock floor.</p>
 				<p>Seals had to be coaxed into a first aid basket, and lifted by a crane
 					over the dock walls to be released back into the ocean.</p>
-				<p>&quot;It was quite an ordeal getting them out,&quot; says Daryl Lawes, <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Environmetnal
-					Coordinator, Environmetnal Services Directorate in Victoria.</p>
+				<p>&quot;It was quite an ordeal getting them out,&quot; says Daryl Lawes, <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Environmental
+					Coordinator, Environmental Services Directorate in Victoria.</p>
 				<p>&quot;They would bite and snap at the brooms used, and up to six dock
 					employees would be needed to rescue them.&quot;</p>
-				<p>The bigger problem was the fish. Mr Lawes says that a local anglers
+				<p>The bigger problem was the fish. Mr. Lawes says that a local anglers
 					association was releasing salmon into the nearby marina,
 					and fish restoration efforts in the harbour and adjacent
 					rivers led to a significant increase in fish activity. The
 					grey graving dock simply looked like a river mouth to the
 					salmon, and attracted them in droves.</p>
-				<p>Aftter the dock water was pumped out, up to 20&nbsp;employees in gumboots would
+				<p>After the dock water was pumped out, up to 20&nbsp;employees in gumboots would
 					run around the dock floor with nets, scooping up fish. Ship
 					owners stood by and waited, unhappy that they were losing
 					precious dock time and that sometimes hundreds of repair
 					personnel were forced to remain idle.</p>
-				<p>it came to a head about a year and a half ago when a ship docked at around
+				<p>It came to a head about a year and a half ago when a ship docked at around
 					11:30&nbsp;p.m. When the water was pumped out, almost 150&nbsp;salmon
 					&mdash; at 20&nbsp;to 25&nbsp;kilos each &mdash; were splashing on the dock floor.</p>
 				<p><acronym title="Public Works and Government Services Canada">PWGSC</acronym> Dock Operator Bill Anderson recalls being told to put his hipwaders
@@ -142,27 +142,27 @@
 					black pipe down the wall and a white pipe along the bottom
 					of the Esquimalt Graving Dock release a curtain of air bubbles
 					that prevent seals and fish from entering the dock with ships. </div>
-				<p>Mr Anderson, who has a background in the pipeline industry, was asked
+				<p>Mr. Anderson, who has a background in the pipeline industry, was asked
 					to come up with a solution. His research revealed a bubble
 					curtain that was used at some fish hatcheries and dams, and
 					he adapted the concept for the graving dock. A long pipe
 					was fitted to run down the 25&nbsp;metre walls and across the
 					floor. A series of holes,     about 60&nbsp;centimetres apart,
 					was drilled into the pipes and a pressure gauge fitted on top.</p>
-				<p>Mr anderson said the project was an experiment and it earned him the nickname
+				<p>Mr. Anderson said the project was an experiment and it earned him the nickname
 					&quot;Bubble Boy.&quot; &quot;I got teased a lot. People told me they weren't
 					sure it was going to work. I would answer, 'Neither am I.'
 					&quot;</p>
 				<p>But it did. As a ship approached, the turn of a handle forced air through
-					the small holes, producing a curtain fo bubbles. The salmon
+					the small holes, producing a curtain of bubbles. The salmon
 					turned away from it and the seals, curious by nature, were
 					attracted by the oddity, but did not venture past it.</p>
-				<p>Mr Lawes says they haven't had any complaints since they introduced the
+				<p>Mr. Lawes says they haven't had any complaints since they introduced the
 					curtain. He says the real test will come this fall during
 					spawning season when salmon return to the area, but he remains
 					optimistic. And the final price tag for the cost-saving solution
 					was only $700.</p>
-				<p>&quot;This is a real success,&quot; says Wr Lawes. &quot;Everyone is pleased. Sometimes
+				<p>&quot;This is a real success,&quot; says Mr. Lawes. &quot;Everyone is pleased. Sometimes
 					the best solutions are the simplest.&quot; </p>
 			</div>
 
