--- a/his/1921-fra.html
+++ b/his/1921-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>1921 &ndash; 1923 &ndash; CSE &ndash; TPSGC</title>
+<title>Historique&nbsp;1921-1923 &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt;&nbsp;1921-1923</p>
+			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; Historique&nbsp;1921-1923</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -85,11 +85,10 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Historique
+					Historique&nbsp;1921 &ndash; 1923
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="option4">
-					<h2>1921&nbsp;&ndash; 1923</h2>
 					<div class="smallFont" style="font-weight:bold;">
 						<img src="../images/historique_history/1921_1.jpg" alt="" width="300" height="246" /><br />
 						Vue de la cale en direction ouest<br /><br />
