--- a/his/1926-fra.html
+++ b/his/1926-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>1926 &ndash; CSE &ndash; TPSGC</title>
+<title>Historique&nbsp;1926 &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="1926 - CSE - TPSGC" />
+<meta name="dc.title" content="Historique 1926 - CSE - TPSGC" />
 <meta name="dc.subject" scheme="gccore" content="Navire; Quai; Histoire" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt;&nbsp;1926</p>
+			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; Historique&nbsp;1926</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -85,11 +85,10 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Historique
+					Historique&nbsp;1926
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="option4">
-					<h2>1926</h2>
 					<div class="smallFont" style="font-weight:bold;">
 						<img src="../images/historique_history/1926_1.jpg" alt="" width="300" height="245" /><br />
 						Caisson &ndash; Section&nbsp;1<br /><br />
