--- a/site-eng.html
+++ b/site-eng.html
@@ -93,7 +93,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<ul>
-					<li><a href="index-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym> Home</a></li>
+					<li><a href="index-eng.html">Esquimalt Graving Dock &ndash; Welcome</li>
 					<li><a href="emp-loc-eng.html">Location</a></li>
 					<li><a href="services-eng.html">Services</a></li>
 
@@ -102,8 +102,7 @@
 					<li><a href="env/programme-program-eng.html">Environmental Program</a>
 						<ul>
 							<li><a href="env/politique-policy-eng.html">Environmental Policy Statement</a></li>
-							<li><a href="env/gestion-management-eng.html">Management</a></li>
-							<li><a href="env/initiatives-eng.html">Initiatives</a></li>
+							<li><a href="env/gestion-management-eng.html">Environmental Best Management Practices</a></li>
 							<li><a href="env/interet-interest-eng.html">Articles of Interest</a></li>
 						</ul>
 					</li>
@@ -116,11 +115,11 @@
 							<li> <a href="his/1925-eng.html">History&nbsp;1925</a></li>
 							<li> <a href="his/1926-eng.html">History&nbsp;1926</a></li>
 							<li> <a href="his/1927-eng.html">History&nbsp;1927</a></li>
-							<li> <a href="his/article-eng.html"><acronym title="Queen Elizabeth">QE</acronym> II Article</a></li>
+							<li> <a href="his/article-eng.html"><acronym title="Queen Elizabeth">QE</acronym> Article</a></li>
 						</ul>
 					</li>
 
-					<li> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">Booking</a></li>
+					<li> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">Booking Space at the <acronym title="Esquimalt Graving Dock">EGD</acronym></a></li>
 					<li><a href="rendement-performance-eng.html">Performance Standard</a></li>
 				</ul>
 				<ul>
