--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -132,7 +132,7 @@
       <p>
         Since certification in&nbsp;2001, this environmental management system has provided
         the framework for the implementation of successful, cost effective environmental
-        programs and initiatives. These programs help ensure on site businesses conduct
+        programs and initiatives. These programs help ensure on-site businesses conduct
         their operations in a conscientious manner by reducing environmental impacts
         and demonstrating consideration for the health, safety and well being of
         on-site users and the surrounding community.
