Move instructions for obtaining EBMPs to the appropriate section

--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -188,6 +188,12 @@
         and materials handling.
       </p>
 
+      <p>
+        To obtain a copy of the <acronym title="Esquimalt Graving Dock">EGD</acronym> 
+        Environmental Best Management Practices, please contact the 
+        <a href="#coordonnateur-coordinator">Environmental Coordinator</a>.
+      </p>
+
       <div class="topPage">
         <a href="#tphp" title="Return to Top of Page">
           <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
@@ -219,8 +225,7 @@
       <p>
         If you have any questions regarding
 				the Environmental Policy or the environmental programs at the Esquimalt Graving
-        Dock, or to obtain a copy of the <acronym title="Esquimalt Graving Dock">EGD</acronym> 
-        Environmental Best Management Practices, please contact the Environmental Coordinator at:
+        Dock, please contact the Environmental Coordinator at:
       </p>
 
 		  <p>
