--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -193,6 +193,12 @@
         de moteurs et la manutention de mat&eacute;riaux. 
       </p>
 
+      <p>
+        Pour obtenir une copie des meilleures pratiques 
+        de gestion de l'environnement de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>,
+        veuillez communiquer avec le <a href="#coordonnateur-coordinator">Coordonnateur environnemental</a>.
+      </p>
+
       <div class="topPage"> 
         <a href="#tphp" title="Retourner au haut de la page">
           <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
@@ -221,8 +227,7 @@
       <p>
         Si vous avez des questions &agrave; l'&eacute;gard
 				de la Politique environnementale ou des programmes environnementaux de la
-        cale s&egrave;che d'Esquimalt, ou pour obtenir une copie des meilleures pratiques 
-        de gestion de l'environnement de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym>,
+        cale s&egrave;che d'Esquimalt, 
         veuillez communiquer avec le coordonnateur environnemental&nbsp;:
       </p>
 
