Remove redundant acronym definition

--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -123,7 +123,7 @@
       <p>
         The <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
         certification is an internationally recognized standard for the development
-        and implementation of an Environmental Management System (EMS).
+        and implementation of an Environmental Management System.
         Qualifying for this recognition in&nbsp;2001, the Esquimalt Graving Dock has
         implemented this management system to help identify and prioritize environmental
         issues on site.
