--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -119,7 +119,7 @@
       <p>
         La certification <acronym title="Organisation internationale de normailisation">IS0</acronym> 14001
         est un norme internationale concerant l'&eacute;laboration et la mise en &#339;uvre
-        d'un syst&egrave;me de gestion de l'environnement (SGE).
+        d'un syst&egrave;me de gestion de l'environnement.
         Admissible &agrave; cette certification en 2001, la cale s&egrave;che d'Esquimalt a
         mis en &#339;uvre ce syst&egrave;me de gestion afin de l'aider &agrave; cerner
         les probl&egrave;mes environnementaux dans ses installations et &agrave; &eacute;tablir
