--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -13,6 +13,9 @@
     <h2>What's New</h2>
     <ul>
       <li>
+        <a title="EGD: Electrical Lockout Policy" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/avis-notices-eng.html">New Electrical Lockout, Policy, Procedures &amp; Records</a>
+      </li>
+      <li>
         <a title="EGD: Capital Projects" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a>
       </li>
       <li>
