--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -113,7 +113,7 @@
         <br />
 				<div class="option4">
 				<h2>Dock Dimensions</h2>
-				<a href="dimensions2-eng.html"><img src="images/dimensions-2.gif" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" title="Please click here to view a larger version of this image." width="450" height="282" /></a>
+				<a href="dimensions2-eng.html"><img src="images/dimensions.jpg" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" title="Please click here to view a larger version of this image." width="450" height="282" /></a>
 				<h2>Aerial View of the Dock</h2>
 				<img src="images/aerienne-aerial-eng.jpg" width="450" height="284" alt="Aerial view of North Landing Wharf and South Jetty" />
 				<h2>Cross Section of the Dock</h2>
