--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -114,7 +114,7 @@
         <br />
 				<div class="option4">
 					<h2>Dimensions du bassin</h2>
-					<a href="dimensions2-fra.html"><img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale s&egrave;che d'Esquimalt." title="S'il vous pla&icirc;t cliquer ici pour voir une version agrandie de cette image." width="450" height="282" /></a>
+					<a href="dimensions2-fra.html"><img src="images/dimensions.jpg" alt="Vue en plan, coupe longitudinale et dimensions de la cale s&egrave;che d'Esquimalt." title="S'il vous pla&icirc;t cliquer ici pour voir une version agrandie de cette image." width="450" height="282" /></a>
 					<h2>Vue a&eacute;rienne du bassin</h2>
 					<img src="images/aerienne-aerial-fra.jpg" width="450" height="284" alt="Vue a&eacute;rienne du quai d'embarquement nord et de la jet&eacute;e sud." />
 					<h2>Vue en coupe du bassin</h2>
