--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -85,7 +85,7 @@
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 			</a></h1><a name="il" id="il"></a>
 		
-		<img src="images/dimensions.gif" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" width="740"  style="width: 740px; " />
+		<img src="images/dimensions.jpg" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" />
 			</div>
 			
 			<p style="text-align:center;"><a href="dimensions-eng.html" title="Back to &lsquo;About the Dock&rsquo;">Back to &ldquo;About the Dock&rdquo;</a></p>
