--- a/dimensions2-fra.html
+++ b/dimensions2-fra.html
@@ -85,7 +85,7 @@
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</a></h1><a name="il" id="il"></a>
 			
-				<img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="740" style="width: 740px; " />
+				<img src="images/dimensions.jpg" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." />
 			</div>
 				
 			<p style="text-align:center;"><a href="dimensions-fra.html" title="Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;">Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;</a></p>
