Update dimensions with captions

--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -72,7 +72,8 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;Dock Dimensions </p>
+			&gt; <a href="dimensions-eng.html">About the Dock</a>			
+			&gt; Dock Dimensions </p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->	
 		
 		<!-- ONE COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE D'UNE COLONNE -->
@@ -85,10 +86,17 @@
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 			</a></h1><a name="il" id="il"></a>
 		
-		<img src="images/dimensions.jpg" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions" />
-			</div>
+			<img src="images/dimensions.jpg" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions, details in text following the image." width="740"  style="width: 740px; " />
 			
-			<p style="text-align:center;"><a href="dimensions-eng.html" title="Back to &lsquo;About the Dock&rsquo;">Back to &ldquo;About the Dock&rdquo;</a></p>
+		</div>
+		<div class="smallFont" style="font-weight:bold; width:730px; margin-bottom:40px;">
+			<p>The image above shows the plan and longitudinal views of the drydock.</p>
+			<p>The Esquimalt Graving Dock's dimensions measure 357.5&nbsp;metres by 38.4&nbsp;metres &ndash; or about 1,200&nbsp;feet long by 135&nbsp;feet wide. The facility is provided with two floating caisson gates, which can be positioned at any of four alternative locations to partition the drydock into two dock sections.  The top of the dry dock floor slab is -10.52&nbsp;m and the granite coping (top of the dock retaining walls) is at 4.42&nbsp;m.</p>
+			<p>Please <a href="cn-cu-eng.html">contact <acronym title="Esquimalt Graving Dock">EGD</acronym></a> for more details on the dock dimensions.</p>
+			
+		</div>
+			
+		<p><a href="dimensions-eng.html">Back to &ldquo;About the Dock&rdquo;</a></p>
 			
 		</div>
 
