--- a/dimensions2-fra.html
+++ b/dimensions2-fra.html
@@ -72,7 +72,8 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;Dimensions du bassin</p>
+			&gt; <a href="dimensions-fra.html">Renseignments g&eacute;n&eacute;raux</a>
+			&gt; Dimensions du bassin</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		
 		<!-- ONE COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE D'UNE COLONNE -->
@@ -85,10 +86,16 @@
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</a></h1><a name="il" id="il"></a>
 			
-				<img src="images/dimensions.jpg" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." />
+				<img src="images/dimensions.jpg" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt, détails dans le texte qui suit l'image." width="740" style="width: 740px; " />
 			</div>
+			
+		  <div class="smallFont" style="font-weight:bold; width:730px; margin-bottom:40px;">
+				<p>L'image ci-dessus donne une vue en plan et une vue longitudinale de la cale s&egrave;che.</p>
+			  <p>La cale s&egrave;che d'Esquimalt mesure 357,5&nbsp;m sur 38,4&nbsp;m, soit environ 1&nbsp;200&nbsp;pi de longueur sur 135&nbsp;pi de largeur. L'installation est dot&eacute;e de deux vannes &agrave; caisson flottant, qui peuvent &ecirc;tre dispos&eacute;es &agrave; quatre endroits diff&eacute;rents pour diviser la cale en deux sections. Le dessus de la dalle de plancher de la cale s&egrave;che est &agrave; -10,52&nbsp;m et le couronnement de granit (dessus des murs de sout&egrave;nement de la cale s&egrave;che) se trouve &agrave; 4,42&nbsp;m.</p>
+			  <p>S'il vous pla&icirc;t <a href="cn-cu-fra.html">contactez <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym></a> pour plus de d&eacute;tails sur les dimensions du bassin.</p>
+		  </div>
 				
-			<p style="text-align:center;"><a href="dimensions-fra.html" title="Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;">Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;</a></p>
+			<p><a href="dimensions-fra.html">Retour &agrave; &laquo;&nbsp;Renseignments g&eacute;n&eacute;raux&nbsp;&raquo;</a></p>
 			
 			</div>
 
