Wrong image name

--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -113,7 +113,7 @@
         <br />
 				<div class="option4">
 				<h2>Dock Dimensions</h2>
-				<img src="images/dimensions-2.jpg" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions, details in text following the image. Please click on the link below to view the larger image." width="450" height="282" />
+				<img src="images/dimensions.jpg" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions, details in text following the image. Please click on the link below to view the larger image." width="450" height="282" />
 				<div class="smallFont" style="font-weight:bold; width:450px; margin-bottom:30px;">
 					<p>A <a href="dimensions2-eng.html">larger image of &ldquo;Dock Dimensions&rdquo;</a> is available on a separate page.</p>
 					<p>Schematic of the Esquimalt Graving Dock showing the plan and longitudinal views of the drydock. The Esquimalt Graving Dock's dimensions measure 357.5&nbsp;metres by 38.4&nbsp;metres &ndash; or about 1,200&nbsp;feet long by 135&nbsp;feet wide. The Dock can be divided into two seperate sections.</p>
