--- a/index-eng.html
+++ b/index-eng.html
@@ -56,100 +56,41 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<!-- MainContentStart -->
-<h1 id="wb-cont">Content page + Secondary menu 1 - GC Web Usability theme</h1>
-
-<section><h2>Heading 2 (<code>h2</code>) default appearance</h2>
-	<section><h3>Heading 3 (<code>h3</code>) default appearance</h3>
-		<section><h4>Heading 4 (<code>h4</code>) default appearance</h4>
-			<section><h5>Heading 5 (<code>h5</code>) default appearance</h5>
-				<section><h6>Heading 6 (<code>h6</code>) default appearance</h6>
-					<p>Paragraph default appearance</p>
-				</section>
-			</section>
-		</section>
-	</section>
-</section>
-
-<p><a href="#">Link default appearance</a></p>
-<p><a href="mailto:"><code>mailto:</code> link default appearance</a></p>
-<p><a href="http://www.">Third party <code>http://www.</code> link default appearance</a></p>
-<p><a href=".doc">Link to file downloads based on file type <code>.doc</code>, <code>.psd</code>, <code>.zip</code>, <code>.pdf</code>, <code>.xls</code>, <code>.xlt</code>, <code>.rtf</code> and <code>.txt</code> default appearance</a></p>
-<p>Abbreviation default appearance: <abbr title="Treasury Board">TBS</abbr>.</p>
-
-<ul>
-<li>unordered list (<code>ul</code>) first level default appearance
-	<ul>
-	<li>unordered list (<code>ul</code>) second level default appearance
-		<ul>
-		<li>unordered list (<code>ul</code>) third level default appearance</li>
-		</ul>
-	</li>
-	</ul>
-</li>
-</ul>
-
-<ol>
-<li>ordered list (<code>ol</code>) first level default appearance</li>
-<li>ordered list (<code>ol</code>) first level default appearance
-	<ol>
-	<li>ordered list (<code>ol</code>) second level default appearance</li>
-	<li>ordered list (<code>ol</code>) second level default appearance
-		<ol>
-		<li>ordered list (<code>ol</code>) third level default appearance</li>
-		<li>ordered list (<code>ol</code>) third level default appearance</li>
-		</ol>
-	</li>
-	</ol>
-</li>
-</ol>
-
-<table>
-<caption>Table caption default appearance</caption>
-<thead>
-<tr>
-<th scope="col">Table header (<code>th</code>) default appearance</th>
-<th scope="col">Table header (<code>th</code>) default appearance</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Table data (<code>td</code>) default appearance</td>
-<td>Table data (<code>td</code>) default appearance</td>
-</tr>
-</tbody>
-</table>
-
-<form action="#" method="post">
-<div><label for="data1">Form input default appearance:</label> <input name="data1" type="text" id="data1" /></div>
-<div><label for="data2">Form text area default appearance:</label> <textarea name="data2" cols="15" rows="3" id="data2"></textarea></div>
-<div><label for="data4">Form <code>select</code> default appearance:</label> 
-<select id="data4" name="data4">
-<option value="Option 1">Option 1</option>
-<option value="Option 2">Option 2</option>
-<option value="Option 3">Option 3</option>
-<option value="Option 4">Option 4</option>
-</select></div>
-<fieldset><legend>Form <code>legend</code>, <code>fieldset</code> and <code>checkbox</code> default appearance</legend>
-<div><input name="checkbox" type="checkbox" id="data5" value="checkbox" />&#160;<label for="data5">Option 1</label>&#160;&#160;
-<input name="checkbox" type="checkbox" id="data6" value="checkbox" />&#160;<label for="data6">Option 2</label>&#160;&#160;
-<input name="checkbox" type="checkbox" id="data7" value="checkbox" />&#160;<label for="data7">Option 3</label>&#160;&#160;
-<input name="checkbox" type="checkbox" id="data8" value="checkbox" />&#160;<label for="data8">Option 4</label></div>
-</fieldset>
-<div><input name="submit" type="submit" id="submit" value="Submit default appearance" />
-<input name="reset" type="reset" id="reset" value="Reset default appearance" /></div>
-</form>
-
-<blockquote>
-<p>&quot;Blockquote default appearance&quot;.</p>
-</blockquote>
-<!-- EndEditableContent -->
-<dl id="gcwu-date-mod" role="contentinfo">
-<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
-</dl>
-<div class="clear"></div>
-<!-- MainContentEnd -->
-</div></div>
+		<h1 id="cont">
+			<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
+			Esquimalt Graving Dock &ndash; Welcome
+			<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
+		</h1>
+      
+		<div class="main1"><img src="images/dock-cale.jpg" alt="" width="388" height="250" style="width: 388px; height: 250px;" />
+					
+			<p>The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. <acronym title="Esquimalt Graving Dock">EGD</acronym> is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are <a href="emp-loc-eng.html">located</a> in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim. </p>
+			<p>Our world class facilities include stabilizer pockets and high-speed heavy lift cranes up to 150&nbsp;tonnes/165&nbsp;tons. The Dock can accommodate vessels up to 100,000&nbsp;<acronym title="Deadweight Tonnage">DWT</acronym> or about 90%&nbsp;of the world's ships.</p>
+			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available to any company or individual</a> on a first-come first-serve basis. All work is carried out by private sector <a href="entreprises-firms-eng.html">ship repair firms</a>. </p>
+		</div>
+		<div class="option2">
+			<h2>Who We Are</h2>
+			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is a branch of Public Works and Government Services Canada (PWGSC) &ndash; a Canadian federal government department.</p>
+			<p>Ship repair work takes place 24-hours-a-day, seven days a week, 365&nbsp;days
+				a year. The Dock provides a full range of ship
+				repair services and amenities like our new stabilizer
+				pockets. </p>
+		</div>
+		<div class="option2">
+			<h2>What We Do</h2>
+			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is a popular
+				location for repair and refit work for:</p>
+			<ul>
+				<li>West Coast cruise ships;</li>
+				<li>Bulk and general cargo vessels travelling to Alaska and the Pacific
+					Rim; and,</li>
+				<li>Canadian vessels &ndash; especially the Department of National Defense and
+					the British Columbia Ferry Corporation.</li>
+			</ul>
+			<p>Our <a href="env/programme-program-eng.html"><acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 environmental management system</a> ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
+          </p>
+        </div>
+      </div></div>
 
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
